# pdfcli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/pdfcli/: Cargo.toml
crates/pdfcli/src/: main.rs
crates/pdfcore/: Cargo.toml
crates/pdfcore/examples/: gen.rs
crates/pdfcore/src/: lib.rs
tests/fixtures/: README.md
